# Trading-bot

./: .env.example  .gitignore  Dockerfile.monitor  Dockerfile.prod  Dockerfile.trainer  README.md  airflow_exporter.py  backtest_results.pkl  docker-compose.yml  fetch_real_data.py  fetch_real_data_v2.py  mlflow.db  mlflow_exporter.py  params.yaml  pipeline description  pipeline.yaml  pipeline90_final_description.md  pipeline_final_description.md  pipeline_longonly_description.md  pyproject.toml  run_backtest_90days.py  run_backtest_advanced.py  run_backtest_advanced_strategy.py  run_backtest_classifier.py  run_backtest_comprehensive.py  run_backtest_final_optimized.py  run_backtest_high_winrate.py  run_backtest_hourly_ml.py  run_backtest_intraday_optimized.py  run_backtest_relaxed_90day.py  run_monitor_local.py  run_paper_trading.py  run_parameter_optimization.py  run_tp_sl_sweep.py  sandbox_connection_pipeline.md  telegram_bot.md  trading_session_monitor.py  train_classifier.py  train_ensemble.py  train_model_full.py  (+2 more)
backtest_plots/: 01_equity_curves_by_ticker.md  02_pnl_by_ticker.md  03_cumulative_pnl.md  04_trades_distribution.md  05_strategy_signals.md  06_summary_dashboard.md  07_strategy_vs_buyhold.md  08_rolling_sharpe.md
dags/: daily_trading_pipeline.py
docs/: PRODUCTION_INFRASTRUCTURE.md
mlflow_data/: mlflow.db
reports/: backtest_90days.json  backtest_advanced_strategy.json  backtest_comprehensive_optimized.json  backtest_ensemble_stoploss.json  backtest_final_optimized.json  backtest_high_winrate.json  backtest_hourly_classifier.json  evaluate_models.md  (+47 more)
(+231 files in other folders)
