[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moex-sandbox-platform"
version = "0.1.0"
description = "Modular MOEX sandbox trading platform skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "pyyaml>=6.0.2",
  "mlflow>=2.22.0",
  "prometheus-client>=0.22.0",
  "pyarrow>=17.0.0",
  "matplotlib",
  "plotly",
  "lightgbm>=4.0.0",
  "scikit-learn>=1.5.0",
  "aiohttp>=3.9.0",
  "psycopg2-binary>=2.9.9",
  "boto3>=1.34.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
  "mypy>=1.17.0",
]
cloud = [
  "apache-airflow>=2.9.0",
  "celery>=5.3.0",
  "redis>=5.0.0",
]
all = [
  "moex-sandbox-platform[dev,cloud]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
